--- a/habit-tracker-frontend/package.json
+++ b/habit-tracker-frontend/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/**/*.{ts,tsx,css}"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
