--- a/habit-tracker-frontend/package.json
+++ b/habit-tracker-frontend/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write src/**/*.{ts,tsx,css}"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
